--- a/WebContent/test/testMovingAverage.html
+++ b/WebContent/test/testMovingAverage.html
@@ -8,7 +8,7 @@
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
 </script>
 
-<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/stock/highstock.js"></script>
 
 </head>
 <body>
