changed all cdn urls to https

--- a/src/main/webapp/test_ItemList.html
+++ b/src/main/webapp/test_ItemList.html
@@ -6,11 +6,11 @@
 <title>Item List</title>
 
 <script
-	src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js">
+	src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js">
 </script>
 
 <script
-	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
 </script>
 
 </head>
