--- a/src/main/webapp/sessionInfoUI.html
+++ b/src/main/webapp/sessionInfoUI.html
@@ -6,11 +6,11 @@
 <title>Session Information</title>
 
 <script
-	src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js">
+	src="htts://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js">
 </script>
 
 <script
-	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
 </script>
 
 <script src="http://code.highcharts.com/highcharts.js"></script>
